Tweaked issues page for readability

--- a/css/style.css
+++ b/css/style.css
@@ -225,9 +225,8 @@
 
 	#sidebox{
 		position: fixed;
-    	top: 20%;
-    	left: 75%;
-
+    	top: 23.33%;
+    	left: 66%;
     }
 
     @media screen and (max-width: 1024px) {
